<resources>
    <string name="app_name">SpotifyWrapped</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="backbutton">Back</string>


    <string name="mins_listened_intro">You listened to XXX total artists, for a total of:</string>
    <string name="mins_listened_placeholder">XXX</string>
    <string name="top_genre_placeholder">GENRE NAME</string>
    <string name="top_song_placeholder">SONG NAME</string>
    <string name="top_artist_placeholder">ARTIST NAME</string>


    <string name="matching_game_home">Matching: Your Top Artists</string>
    <string name="hangman_game_home">Hangman: Guess your music</string>
    <string name="hangman">Hangman</string>

    <string-array name="time_frame_options">
        <item>Short Term</item>
        <item>Medium Term</item>
        <item>Long Term</item>
    </string-array>
</resources>
