<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/spotify_black"
    android:fitsSystemWindows="true"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePhoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/navName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:ellipsize="end"
                android:fontFamily="@font/spotify_font"
                android:maxLines="1"
                android:text="@string/nav_header_title"
                android:textColor="@color/spotify_white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/navEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:ellipsize="end"
                android:fontFamily="@font/spotify_font"
                android:maxLines="1"
                android:text="@string/nav_header_subtitle"
                android:textColor="@color/spotify_light_grey"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:translationX="-1dp">

                <FrameLayout
                    android:layout_width="20dp"
                    android:layout_height="20dp">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:translationX="-2dp"
                        app:srcCompat="@drawable/copper_coin_fill"
                        app:tint="@color/spotify_gold" />
                </FrameLayout>

                <TextView
                    android:id="@+id/navTotalPoints"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/spotify_font"
                    android:maxLines="1"
                    android:text="0000"
                    android:textColor="@color/spotify_light_grey"
                    android:textSize="12sp"
                    android:translationX="-2dp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="@color/spotify_darker_grey" />

</LinearLayout>